--- a/src/labs/outlab7/CMakeLists.txt
+++ b/src/labs/outlab7/CMakeLists.txt
@@ -18,20 +18,17 @@ set(MPI_C_COMPILER /usr/lib64/openmpi/bin/mpicc)
 set(MPI_CXX_COMPILER /usr/lib64/openmpi/bin/mpicxx)
 find_package(MPI REQUIRED)
 
-set(LINK_LIBS utils stdc++fs ${MPI_LIBRARIES} ${Boost_LIBRARIES})
-
 # Create the outlab7_lib library target
 add_library(outlab7_lib STATIC ${LIB_SRC})
 target_include_directories(outlab7_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${MPI_INCLUDE_PATH})
-target_link_libraries(outlab7_lib ${LINK_LIBS})
+target_link_libraries(outlab7_lib utils stdc++fs ${MPI_LIBRARIES} Boost::program_options Boost::serialization)
+
 # If using MPI compiler wrappers, you should set proper compiler flags
 if(MPI_COMPILE_FLAGS)
-    set_target_properties(outlab7_lib PROPERTIES
-            COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
+    set_target_properties(outlab7_lib PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
 endif()
 if(MPI_LINK_FLAGS)
-    set_target_properties(outlab7_lib PROPERTIES
-            LINK_FLAGS "${MPI_LINK_FLAGS}")
+    set_target_properties(outlab7_lib PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
 endif()
 
 # Modify the outlab7 executable target to link with outlab7_lib
