WIP:: initial implementation and tests complete

--- a/src/utils/math/blas/tests/CMakeLists.txt
+++ b/src/utils/math/blas/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TEST_SOURCES
         matrix/MatrixPerformanceTests.cpp
         vector/BaseVectorTests.cpp
         TestedTypes.h
+        matrix/MatrixUtilityTests.cpp
 )
 
 if (NOT TARGET blas_tests)
