--- a/src/project/CMakeLists.txt
+++ b/src/project/CMakeLists.txt
@@ -2,5 +2,6 @@
 add_subdirectory(project1)
 add_subdirectory(project2)
 add_subdirectory(project3)
+add_subdirectory(project4)
 
 add_subdirectory(sources)
