--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,52 +1,16 @@
+add_subdirectory(math)
+add_subdirectory(mpi)
+add_subdirectory(profiler)
+add_subdirectory(physics)
+
 set(UTILS_LIB_HEADERS
         CheckBounds.h
         FileParser.h
         Helpers.h
         json.hpp
-
-        profiler/Profiler.h
-        profiler/ProfilerHelper.h
-        profiler/ResourceMonitor.h
-        profiler/Stopwatch.h
-
+        Stopwatch.h
         CommandLine.h
         Project.h
-        mpi/MPIProject.h
-
-        math/blas/BLAS.h
-        math/blas/Ops.h
-        math/blas/Stats.h
-
-        math/blas/system/Circuit.h
-
-        math/blas/matrix/Matrix.h
-        math/blas/matrix/LazyMatrix.h
-        math/blas/matrix/ElementwiseExpression.h
-
-        math/blas/vector/LazyVector.h
-        math/blas/vector/Vector.h
-        math/blas/vector/VectorExpression.h
-
-        math/factorization/LU.h
-        math/factorization/LUP.h
-        math/factorization/Factorize.h
-
-        math/LinearSolver.h
-        math/Random.h
-        math/RootFinder.h
-
-        math/relaxation/SORPJ.h
-        math/relaxation/SOR.h
-        math/relaxation/SSOR.h
-        math/relaxation/RelaxationMethods.h
-
-        physics/diffusion/DiffusionParams.h
-        physics/diffusion/DiffusionMatrix.h
-        physics/diffusion/DiffusionConstants.h
-        math/Math.h
-        math/blas/Constants.h
-        math/blas/vector/MatrixVectorExpression.h
-        math/blas/matrix/ContainerExpression.h
 )
 
 set(UTILS_LIB_SOURCES
@@ -60,8 +24,5 @@ if (NOT TARGET utils)
 endif ()
 
 # Link utils against Boost libraries
-target_link_libraries(utils Boost::program_options Boost::serialization)
+target_link_libraries(utils utils_math utils_mpi utils_profiler utils_physics Boost::program_options Boost::serialization)
 target_link_libraries(utils OpenMP::OpenMP_CXX)
-
-add_subdirectory(physics)
-add_subdirectory(math)
