--- a/src/utils/physics/diffusion/tests/CMakeLists.txt
+++ b/src/utils/physics/diffusion/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ set(TEST_SOURCES
         DiffusionParamsTests.cpp
         DiffusionConstantsTests.cpp
         DiffusionMatrixTests.cpp
+        FluxCalculationTests.cpp
 )
 
 if (NOT TARGET physics_diffusion_tests)
